--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+
+img{
+  height: 100px;
+}
+
+h1{
+  padding-left: 120px;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
